--- a/package.json
+++ b/package.json
@@ -4,5 +4,56 @@
   "main": "index.js",
   "repository": "git@github.com:EdwardLea/react-paired.git",
   "author": "edwardlea <leaedward87@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "serve": "webpack-dev-server --mode=development",
+    "build": "webpack -p",
+    "start": "node index",
+    "seed": "node db/seeds",
+    "test": "nyc mocha test/**/*_spec.js --require test/spec_helper --recursive --exit"
+  },
+ "dependencies": {
+   "@mapbox/react-geocoder": "^2.5.0",
+   "bcrypt": "^3.0.3",
+   "bluebird": "^3.5.3",
+   "body-parser": "^1.18.3",
+   "copy-webpack-plugin": "^4.6.0",
+   "dotenv": "^6.2.0",
+   "dotenv-webpack": "^1.7.0",
+   "express": "^4.16.4",
+   "jsonwebtoken": "^8.4.0",
+   "mapbox-gl": "^0.53.0",
+   "mapbox-gl-geocoder": "^2.0.1",
+   "mongoose": "^5.4.9",
+   "mongoose-unique-validator": "^2.0.2",
+   "react": "^16.7.0",
+   "react-dom": "^16.7.0",
+   "react-mapbox-autocomplete": "^0.2.3",
+   "react-router-dom": "^4.3.1",
+   "react-select": "^2.3.0",
+   "serve": "^10.1.2",
+   "axios": "^0.18.0",
+   "bulma": "^0.7.2",
+   "@fortawesome/fontawesome-free": "^5.7.1"
+ },
+ "devDependencies": {
+   "@babel/core": "^7.2.2",
+   "@babel/preset-env": "^7.3.1",
+   "@babel/preset-react": "^7.0.0",
+   "babel-loader": "^8.0.5",
+   "chai": "^4.2.0",
+   "css-loader": "^2.1.0",
+   "file-loader": "^3.0.1",
+   "html-webpack-plugin": "^3.2.0",
+   "mocha": "^5.2.0",
+   "node-sass": "^4.11.0",
+   "nyc": "^13.2.0",
+   "sass-loader": "^7.1.0",
+   "style-loader": "^0.23.1",
+   "supertest": "^3.4.2",
+   "url-loader": "^1.1.2",
+   "webpack": "^4.29.1",
+   "webpack-cli": "^3.2.3",
+   "webpack-dev-server": "^3.1.14"
+ }
 }
